# urban_perception

./: .gitignore  README.md  RawFeat.py  RawFeat_s.py  custom_datasets.py  image_utils.py  inference.py  main.py  pp2.py  pyproject.toml  raw_feat.py  raw_feat_reg.py  requirements.txt  setup.py  test.py  train.py  utils.py  validation.py
core_py/datasets/: pp2.py
core_py/eval/: test.py
core_py/nets/: raw_feat.py  raw_vit.py
core_py/pipeline/: train_pipeline.py  validation_pipeline.py
core_py/utils/: image_utils.py  utils.py
