[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-perception"
version = "0.1.0"
description = "Pytorch implementation for an urban perception related algorithm"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "matplotlib==3.9.4",
    "mpld3==0.5.9",
    "numpy==1.23.5",
    "pandas==2.2.3",
    "paramiko==3.3.1",
    "plotly==5.10.0",
    "scikit-learn==1.3.2",
    "torch==2.1.0",
    "torchvision==0.16.0"
]

